# NukeHydraPlugins

./: CMakeLists.txt  README.md
.github/: CODEOWNERS
cmake/: FindNuke.cmake  FindUSD.cmake
src/hdNuke/: CMakeLists.txt  adapter.h  adapterFactory.cpp  adapterFactory.h  adapterManager.cpp  adapterManager.h  delegateConfig.cpp  delegateConfig.h  environmentLightAdapter.cpp  environmentLightAdapter.h  geoAdapter.cpp  geoAdapter.h  hdNukeTexture.cpp  instancedGeoAdapter.cpp  instancedGeoAdapter.h  instancerAdapter.cpp  instancerAdapter.h  knobFactory.cpp  lightAdapter.cpp  lightAdapter.h  lightOp.cpp  materialAdapter.cpp  materialAdapter.h  nukeTexturePlugin.cpp  nukeTexturePlugin.h  opBases.cpp  opBases.h  particleSpriteAdapter.cpp  particleSpriteAdapter.h  renderStack.cpp  sceneDelegate.cpp  sceneDelegate.h  sharedState.h  tokens.h  types.h  utils.cpp  utils.h  vtValueKnobCache.cpp
src/hdNuke/hdNukeTexture/resources/: plugInfo.json
src/ops/: CMakeLists.txt  HydraCylinderLight.cpp  HydraDiskLight.cpp  HydraDomeLight.cpp  HydraRectLight.cpp  HydraRender.cpp  HydraSphereLight.cpp
tests/: main.cpp
tests/hdNuke/: adapterFactoryTest.cpp  adapterManagerTest.cpp  mockObjects.h
